--- a/index.html
+++ b/index.html
@@ -3,99 +3,75 @@
 <head>
 <meta charset="UTF-8">
 <title>Sparsh</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
+html, body {
+    margin: 0;
+    height: 100%;
     font-family: Arial, sans-serif;
+    background: black;
+    overflow: hidden;
 }
 
-body{
-    height:100vh;
-    background:black;
-    overflow:hidden;
+/* Background photo */
+.bg {
+    position: fixed;
+    inset: 0;
+    background: url('me.png') no-repeat center center;
+    background-size: contain; /* FULL IMAGE VISIBLE */
+    background-color: black;
 }
 
-/* Background image */
-.bg{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:url("me.png") no-repeat center center;
-    background-size:contain;
-    background-color:black;
+/* Dark fade */
+.overlay {
+    position: fixed;
+    inset: 0;
+    background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.8));
 }
 
-/* Dark overlay for readability */
-.overlay{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:rgba(0,0,0,0.5);
+/* Hello Button */
+.center-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 18px 40px;
+    font-size: 26px;
+    border-radius: 40px;
+    border: none;
+    background: white;
+    color: black;
+    cursor: pointer;
+    z-index: 5;
 }
 
-/* Center button */
-.center-btn{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%, -50%);
-    padding:18px 35px;
-    border:2px solid white;
-    color:white;
-    font-size:28px;
-    background:transparent;
-    border-radius:40px;
-    cursor:pointer;
-    z-index:10;
-    transition:0.3s;
+/* Intro Box */
+.intro {
+    position: fixed;
+    bottom: -100%;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.85);
+    color: white;
+    padding: 30px;
+    max-height: 85%;
+    overflow-y: auto;
+    transition: bottom 0.6s ease;
+    z-index: 10;
 }
 
-.center-btn:hover{
-    background:white;
-    color:black;
+.intro.show {
+    bottom: 0;
 }
 
-/* Intro panel */
-.intro{
-    position:fixed;
-    bottom:0;
-    left:0;
-    width:100%;
-    max-height:80%;
-    background:rgba(0,0,0,0.85);
-    color:white;
-    padding:25px;
-    overflow-y:auto;
-    transform:translateY(100%);
-    transition:0.6s ease;
-    border-top-left-radius:25px;
-    border-top-right-radius:25px;
+.intro h1 {
+    margin-top: 0;
 }
 
-.intro.show{
-    transform:translateY(0);
-}
-
-h1{
-    margin-bottom:15px;
-}
-
-p{
-    line-height:1.6;
-    margin-bottom:12px;
-}
-
-a{
-    color:white;
-    text-decoration:underline;
+a {
+    color: #fff;
+    text-decoration: underline;
 }
 </style>
 </head>
@@ -105,27 +81,35 @@ a{
 <div class="bg"></div>
 <div class="overlay"></div>
 
-<button class="center-btn" onclick="openIntro()">Hello there</button>
+<button class="center-btn" id="helloBtn" onclick="openIntro()">Hello there</button>
 
 <div class="intro" id="intro">
-    <h1>Hello there. <b>I'm Sparsh.</b></h1>
+<button onclick="closeIntro()" style="float:right;background:none;border:none;color:white;font-size:26px;">✕</button>
 
-    <p>I’ve always had this strong urge to tell stories — even though, honestly, my writing skills are… well, not great. But I’m trying. And that’s what matters.</p>
+<h1>Hello there. I'm Sparsh.</h1>
 
-    <p>If you’re reading this, it means you clicked a random link on the internet and somehow landed here — on a website that’s actually live and visible to anyone in the world. Kinda wild, right?</p>
+<p>I’ve always had this strong urge to tell stories — even though, honestly, my writing skills are… well, not great. But I’m trying. And that’s what matters.</p>
 
-    <p>I come from a commerce background, and I put this whole thing together overnight. No rocket science, just curiosity and a little courage. Still, I’m proud I tried.</p>
+<p>If you’re reading this, it means you clicked a random link on the internet and somehow landed here — on a website that’s actually live and visible to anyone in the world. Kinda wild, right?</p>
 
-    <p>So yeah… I’ll be writing things here. Some might be messy. Some might be honest. Some might even be good. I just hope someone out there enjoys them.</p>
+<p>I come from a commerce background, and I put this whole thing together overnight. No rocket science, just curiosity and a little courage. Still, I’m proud I tried.</p>
 
-    <p><b>Let’s go.</b></p>
+<p>So yeah… I’ll be writing things here. Some might be messy. Some might be honest. Some might even be good. I just hope someone out there enjoys them.</p>
 
-    <p><a href="stories.html">Go to my stories →</a></p>
+<p><strong>Let’s go.</strong></p>
+
+<p><a href="stories.html">Go to my stories →</a></p>
 </div>
 
 <script>
 function openIntro(){
     document.getElementById("intro").classList.add("show");
+    document.getElementById("helloBtn").style.display = "none";
+}
+
+function closeIntro(){
+    document.getElementById("intro").classList.remove("show");
+    document.getElementById("helloBtn").style.display = "block";
 }
 </script>
 
